--- a/SRM SP/Base.lproj/Main.storyboard
+++ b/SRM SP/Base.lproj/Main.storyboard
@@ -1242,6 +1242,9 @@
                                 <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Metricas"/>
+                                <connections>
+                                    <segue destination="EIC-Fl-VTC" kind="presentation" modalPresentationStyle="automatic" id="WY5-rH-U1w"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IQe-2P-AFQ">
                                 <rect key="frame" x="130" y="687" width="128" height="35"/>
@@ -1278,11 +1281,62 @@
             </objects>
             <point key="canvasLocation" x="1120" y="13.507109004739336"/>
         </scene>
+        <!--Pie Chart Graph View Controller-->
+        <scene sceneID="Zy9-GQ-snQ">
+            <objects>
+                <viewController storyboardIdentifier="PieChartGraphViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="EIC-Fl-VTC" customClass="PieChartGraphViewController" customModule="SRM_SP" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6mg-7W-EZx">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="834"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="negro" translatesAutoresizingMaskIntoConstraints="NO" id="Q5C-Xf-Fnr">
+                                <rect key="frame" x="-29" y="-300" width="449" height="408"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="MX" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cmA-a2-1Ty">
+                                <rect key="frame" x="246" y="55" width="37" height="28"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="23"/>
+                                <color key="textColor" systemColor="systemBackgroundColor"/>
+                                <color key="highlightedColor" systemColor="systemBackgroundColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="MODA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t2n-6t-nLm">
+                                <rect key="frame" x="287" y="55" width="67" height="28"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <color key="textColor" systemColor="systemBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Grafica de Pastel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A0H-Rn-WKq">
+                                <rect key="frame" x="48" y="142" width="295" height="43"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="36"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ie6-WE-4ey" customClass="PieChartView" customModule="Charts">
+                                <rect key="frame" x="0.0" y="230" width="390" height="435"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="mdL-Hg-JU2"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ryP-ho-tSG"/>
+                    <connections>
+                        <outlet property="pieChartView" destination="ie6-WE-4ey" id="hhj-RC-zjx"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EE0-tK-4r6" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1152" y="776"/>
+        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="N8U-2B-MID"/>
-        <segue reference="JAf-Br-xeH"/>
-        <segue reference="aLr-94-sz4"/>
+        <segue reference="Dpw-UT-odL"/>
+        <segue reference="Xps-g9-nzA"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="429590792_7329569083802212_3339064063494423076_n-Photoroom" width="181" height="207.66667175292969"/>
@@ -1302,6 +1356,7 @@
         <image name="casa6" width="288" height="175"/>
         <image name="lista" width="512" height="512"/>
         <image name="metrica" width="512" height="512"/>
+        <image name="negro" width="166.66667175292969" height="166.66667175292969"/>
         <image name="pngwing.com-3" width="4421" height="3810"/>
         <image name="rojo" width="900" height="600"/>
         <systemColor name="labelColor">
